AC_PREREQ([2.60])

AC_INIT([ttysend], [1.0], [], [ttysend], [franklinmathieu@gmail.com])
AC_CONFIG_SRCDIR([ttysend.c])
AC_CANONICAL_SYSTEM

AM_INIT_AUTOMAKE([dist-bzip2 no-dist-gzip foreign])
AC_CONFIG_MACRO_DIR([m4])

AC_PROG_CC
AM_PROG_CC_C_O

AC_PROG_INSTALL
AC_PROG_LN_S

AC_PROG_MAKE_SET

AC_CONFIG_FILES([Makefile])

AC_OUTPUT
